# threshold-finder

./: README.rst  pyproject.toml
.github/workflows/: github-actions-demo.yml
tests/: test_threshold_finder.py
threshold_finder/: finder.py
